turtleart.lessons.turtleart.Main.DiskFour.scala.error
Source:4: error: type yellow is not a member of object java.awt.Color
setCouleur(couleur:Color.yellow)
                         ^