turtleart.lessons.turtleart.Main.DiskFour.scala.code
override def run() {

setCouleur(couleur:Color.yellow)
for (k<-1 to 90) {
avance(100)
recule(100)
droite(1)
}
for (k<-1 to 90) {
avance(100)
recule(100)
droite(1)
}

for (k<-1 to 90) {
avance(100)
recule(100)
droite(1)
}

for (k<-1 to 90) {
avance(100)
recule(100)
droite(1)
}


}
